<resources>
    <string name="app_name">Abon</string>
    <string name="menu_profile">Профиль (логин)</string>
    <string name="menu_comments">Мои комментарии</string>
    <string name="menu_about">О программе</string>
    <string name="comments">Комментарии</string>
    <string name="search">Поиск новостей...</string>
    <string name="list_end">Все новости загружены</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="info_abon">Информационный портал</string>
    <string name="login">Логин</string>
    <string name="pass">Пароль</string>
    <string name="username">Юзернейм</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="id">ID</string>
    <string name="loading_video">Загрузка видео…</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="send">Отпр.</string>
    <string name="enter_comment">Введите комментарий</string>
    <string name="title">Заголовок</string>
    <string name="content">Текст новости</string>
    <string name="add_news_menu">Добавить новость/файл</string>
    <string name="add_news">Добавить новость</string>
    <string name="authorization">Авторизация</string>
    <string name="social_authorization">Авторизация через соц. сеть</string>
    <string name="about">О программе</string>
    <string name="url">http://abon-news.ru</string>
    <string name="copyright">2015 © ABON</string>
    <string name="rights">Все материалы, находящиеся на сайте, охраняются в соответствии с законодательством РФ, в том числе об авторском праве и смежных правах</string>
    <string name="logout">Выйти</string>
    <string name="not_connect">Отсутствует подключение к интернету</string>
    <string name="registration">Регистрация</string>
    <string name="enter_email">Email</string>
    <string name="reg_message">На Ваш email придёт письмо с паролем. Спасибо за регистрацию</string>
    <string name="profile">Профиль</string>
    <string name="need_authorization">Необходимо авторизоваться</string>
    <string name="menu_news">Новости</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="comment_added">Ваш комментарий добавлен</string>
    <string name="version">Версия</string>
    <string name="cancel">Авторизация отменена</string>
    <string name="server_error">Внутренняя ошибка сервера, повторите запрос позже</string>
    <string name="code_error">json_not_logged_in</string>
    <string name="loading">Загружается список новостей...</string>
    <string name="loading_detail">Новость загружается... </string>
    <string name="loading_comments">Комментарии загружаются... </string>
    <string name="added_news">Новость будет добавлена после модерации</string>
    <string name="add_media">Добавить фотографию</string>
    <string name="crash_toast_text">Произошла ошибка. Приложение будет закрыто</string>
    <string name="no_comments">Вы ещё не оставляли комментариев</string>
    <string name="loading_add">Новость добавляется...</string>
    <string name="need_title">Заголовок не может быть пустым</string>
    <string name="need_content">Содержимое новости не может быть пустым</string>
    <string name="loading_profile">Профиль загружается...</string>
    <string name="loading_request">Запрос отправляется на сервер...</string>
    <string name="success_reg">Регистрация завершена. Проверьте вашу почту.</string>
    <string name="reg_error">Во время регистрации произошла ошибка. Повторите попытку позднее</string>
    <string name="loading_picture">Изображение загружается...</string>
    <string name="image_attached">Файл автоматически прикрепится к Вашей новости</string>
    <string name="searching">Идет поиск новостей...</string>
    <string name="no_result">По Вашему запросу ничего не найдено</string>
    <string name="yes">Ок</string>
    <string name="no">Отмена</string>
    <string name="change_password">Сменить пароль</string>
    <string name="need_reauthorize">Ваш пароль успешо изменен. Вы можете авторизоваться повторно, используя новые данные</string>
    <string name="add_video">Добавить видео</string>
    <string name="file_loading">Файл загружается...</string>
    <string name="success_authorization">Вы успешно авторизовались</string>
    <string name="error_authorization">Вы ввели неправильный логин или пароль</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

